fix: 修改发布包的名称

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monolithic-repository/cli",
+  "name": "monolithic-repository-cli",
   "version": "0.0.1",
   "description": "> TODO: description",
   "author": "wuyaoxing <82565097@qq.com>",
